# fletchtime

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING (1).md  CONTRIBUTING.md  ENGINE.md  README.md  REMERCIEMENTS.md  SECURITY.md  SERVER.md  demo.py  fletchtime.spec  pyproject (1).toml  pyproject.toml  run_server.py  run_tests.py
.github/: PULL_REQUEST_TEMPLATE.md
.github (1)/workflows/: docs.yml  test.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml  ci.yml  docs.yml  pypi.yml  release.yml  testpypi.yml
config/: app.toml  flint.toml  indoor.toml
config (1)/: flint.toml  indoor.toml
docs/: api-reference.md  architecture.md  conf.py  index.md  premier-club.md  roadmap.md  specifications.md
docs (1)/: api-reference.md  architecture.md  premier-club.md  remerciements.md  requirements.txt  specifications.md
docs/dev-guide/: index.md
docs/user-guide/: index.md
scripts/: generate_classic_sounds.py
scripts (1)/: generate_classic_sounds.py
src (1)/fletchtime/: __init__.py  gui.py  runtime.py
src (1)/fletchtime/engine/: sequence.py
src (1)/fletchtime/engine/modes/: flint.py  indoor.py
src (1)/fletchtime/server/: config_store.py  ws_server.py
src (1)/fletchtime/web/: config.html  index.html
src (1)/fletchtime/web/_defaults/banners/: README.md
src (1)/fletchtime/web/_defaults/club/: README.md
src/fletchtime/: __main__.py  gui.py  logging_setup.py  runtime.py
src/fletchtime/engine/: __init__.py  engine.py  models.py  sequence.py  turn_modes.py
src/fletchtime/engine/modes/: base.py  flint.py  indoor.py
src/fletchtime/server/: config_store.py  http_static.py  match_server.py  ws_server.py
src/fletchtime/web/: config.html  control.html  display.html  i18n.js  index.html  manual.html  theme.js
src/fletchtime/web/_defaults/gui/: theme.json
src/fletchtime/web/_defaults/sounds/packs/: README.md
src/fletchtime_engine/: engine.py  models.py  sequence.py
src/fletchtime_engine/modes/: __init__.py  base.py  flint.py  indoor.py
src/fletchtime_server/: config_store.py  http_static.py  match_server.py  ws_server.py
tests/: test_config_store.py  test_engine.py  test_flint_mode.py  test_indoor_mode.py  test_main_cli.py  test_match_server.py  test_runtime.py
tests (1)/: test_flint_mode.py  test_indoor_mode.py  test_match_server.py  test_runtime.py
web/: config.html  control.html  display.html  i18n.js  index.html  manual.html
web/assets/banners/: README.md
web/assets/sounds/packs/_custom/: README.md
