[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fletchtime"
version = "0.1.0"
description = "Chronométrage de compétitions d'archerie FFTL (Indoor, Flint) -- serveur + interfaces web incluses"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
dependencies = ["websockets>=12.0"]

[project.optional-dependencies]
docs = ["sphinx>=7.0", "myst-parser>=2.0", "furo>=2024.1.29"]
dev = ["black>=24.0", "ruff>=0.6"]

[project.scripts]
fletchtime = "fletchtime.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["fletchtime*"]

[tool.setuptools.package-data]
"fletchtime.web" = [
    "*.html", "*.js", "*.svg",
    "_defaults/targets/*.jpg",
    "_defaults/sounds/packs/classic/*.wav",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E: pycodestyle, F: pyflakes, I: tri des imports, UP: syntaxe moderne.
select = ["E", "F", "I", "UP"]
ignore = [
    "E501",  # ligne trop longue -- laissé à Black, qui gère déjà ça
]
