[build-system]
requires = ["setuptools>=68", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "fletchtime"
dynamic = ["version"]
description = "Chronométrage de compétitions d'archerie FFTL (Indoor, Flint) -- serveur + interfaces web incluses"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
dependencies = ["websockets>=12.0", "customtkinter>=5.2"]

[project.optional-dependencies]
docs = ["sphinx>=7.0", "myst-parser>=2.0", "furo>=2024.1.29", "sphinxcontrib-mermaid>=0.9", "sphinx-design>=0.6"]
dev = ["black>=24.0", "ruff>=0.6"]

[project.scripts]
fletchtime = "fletchtime.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["fletchtime*"]

[tool.setuptools.package-data]
"fletchtime.web" = [
    "*.html", "*.js", "*.svg",
    "screenshots/*.png",
    "_defaults/targets/*.jpg",
    "_defaults/sounds/packs/classic/*.wav",
    "_defaults/sounds/packs/README.md",
    "_defaults/club/README.md",
    "_defaults/banners/README.md",
    "_defaults/gui/theme.json",
]

[tool.setuptools_scm]
# La version vient désormais du tag git le plus proche (ex. tag "v0.1.2"
# -> version "0.1.2"), plus aucune ligne "version = ..." à maintenir à la
# main. Sur un commit qui n'est pas exactement un tag, produit une version
# de développement PEP 440 valide (ex. "0.1.3.dev4") reflétant le nombre de
# commits depuis le dernier tag -- ce qui, par construction, ne rentre
# jamais en conflit avec une version déjà publiée sur PyPI/TestPyPI.
# Nécessite un dépôt git avec au moins un tag ; voir docs/dev-guide/index.md.
fallback_version = "0.0.0"  # utilisé seulement si aucun tag n'existe encore du tout
local_scheme = "no-local-version"  # sans ça : suffixe +g<hash> ajouté, or
                                     # PyPI/TestPyPI refusent catégoriquement
                                     # toute "version locale" (PEP 440) à
                                     # l'upload -- voir la doc setuptools_scm
write_to = "src/fletchtime/_version.py"
# Génère aussi un simple fichier .py avec la version en clair, importable
# directement (voir fletchtime/__init__.py) -- contrairement à
# `importlib.metadata.version(...)`, ça fonctionne aussi une fois empaqueté
# par PyInstaller, qui ne préserve pas forcément les métadonnées du paquet.
# Fichier généré à la construction, jamais committé (voir .gitignore).

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E: pycodestyle, F: pyflakes, I: tri des imports, UP: syntaxe moderne.
select = ["E", "F", "I", "UP"]
ignore = [
    "E501",  # ligne trop longue -- laissé à Black, qui gère déjà ça
]
